Fixes most if not all spacing consitency, moves all the stylign to the css file, and updates some class names and id names for clarity and css use.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -4,34 +4,29 @@
   margin-left: auto;
   margin-right: auto;
   width: 25%;
-  
 }
+
 body{
     background-color: lightgrey;
 }
+
 title{
     background-color: white;
 }
 #greeting-container {
   margin-top: 20px;
 }
+
 * {
   box-sizing: border-box;
 }
 
-/* Position the image container (needed to position the left and right arrows) */
 .container {
   position: relative;
   height: 900px;
   width: 1600px;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Add a pointer when hovering over the thumbnail images */
 .cursor {
   cursor: pointer;
 }
@@ -54,9 +49,20 @@ title{
 }
 
 header{
-    color: white;
+    background-color: white;
+    position: sticky;
+    top: 0;
+    font-size: 30px;
 }
 
+#avatar{
+    width: 100px;
+    height: 200px;
+}
+
+p{
+    font-size: 20px;
+}
 /* Position the "next button" to the right */
 .next {
   right: 0;
@@ -92,6 +98,10 @@ header{
   clear: both;
 }
 
+.mySlides {
+  display: none;
+}
+
 /* Six columns side by side */
 .column {
   float: left;
@@ -99,12 +109,12 @@ header{
 }
 
 /* Add a transparency effect for thumnbail images */
-.demo {
+.thumbimgcl {
   opacity: 0.6;
 }
 
 .active,
-.demo:hover {
+.thumbimgcl:hover {
   opacity: 1;
 }
 
@@ -113,9 +123,22 @@ img{
     max-height: 100%;
     width: 100%;
 }
+
 ul{
     font-size: 20px;
 }
+
 ul:hover{
     color: red;
+}
+
+#ulimage{
+    width:20px;
+    height:20px;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#thumbimg{
+    width:100%;
 }
